compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__result_bool_5.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 227
expression: "\npub fn main(x) {\n  case x {\n    Ok(True) -> 1\n    Ok(False) -> 2\n  }\n}\n"
---

warning: Inexhaustive patterns
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     Ok(True) -> 1
5 │ │     Ok(False) -> 2
6 │ │   }
  │ ╰───^

This case expression does not have patterns for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing clauses are:

    Error(_) -> todo

In a future version of Gleam this will become a compile error.


